Myprivate-network.yml
Description: >
  (Udacity / practice 3.3)
  Exercise need to create an extension of the on-premises network. 
  This template deploy a private corporate cloud with a VPC, with a pair of private subnets (**) spread
  across two Availability Zones. (**) and default routes for them in the private subnets.
  Last modified: 2020-04-21 UTC+1
  Author: Pascal Richet / Udacity Student 

Parameters:

    EnvironmentName: 
      Description: An environment name that is prefixed to resource names
      Type: String

    VpcCIDR:
      Description: Please enter the IP range (CIDR notation) for this VPC
      Type: String
      Default: 10.0.0.0/16

    PrivateSubnet1CIDR:
      Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
      Type: String
      Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
      Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
      Type: String
      Default: 10.0.3.0/24

    OnPremGateway:
          Description: Please enter the IP address of the on-prem VPN Appliance
          Type: String
          Default: 1.2.3.4

Resources:

    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: !Ref VpcCIDR
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: !Ref EnvironmentName

    PrivateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs  '' ]
        CidrBlock: !Ref PrivateSubnet1CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs  '' ]
        CidrBlock: !Ref PrivateSubnet2CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    PrivateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
      DependsOn: AttachVpnGateway
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable1
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref VPCVGW

    PrivateSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PrivateRouteTable1
        SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
      DependsOn: AttachVpnGateway
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable2
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref VPCVGW

    PrivateSubnet2RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
              RouteTableId: !Ref PrivateRouteTable2
              SubnetId: !Ref PrivateSubnet2

    OurVPN:        
        Type: "AWS::EC2::VPNConnection"
        Properties: 
            Type: ipsec.1
            StaticRoutesOnly: true
            CustomerGatewayId: 
                !Ref ONPREMCGW
            VpnGatewayId: 
                !Ref VPCVGW

    VPCVGW:
        Type: "AWS::EC2::VPNGateway"
        Properties: 
            Type: ipsec.1
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName} Amazon-side Gateway"

    AttachVpnGateway:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId:
                !Ref VPC
            VpnGatewayId:
                Ref: VPCVGW

    ONPREMCGW:
        Type: "AWS::EC2::CustomerGateway"
        Properties:
            BgpAsn : 65000
            IpAddress: !Ref 'OnPremGateway'
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName} On Prem Gateway"
            Type: ipsec.1
